--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -26,9 +26,9 @@
             <option value="5">Other</option>
         </select>
         <label for="recommend">Would you recommend freeCodeCamp to a friend?</label>
-        <input type="radio" name="recommend" id="recommend" value="1"> Definitely
-        <input type="radio" name="recommend" id="recommend" value="2"> Maybe
-        <input type="radio" name="recommend" id="recommend" value="3"> Not Sure
+        <label for="definitely"><input type="radio" name="recommend" id="recommend" value="1" class="inline"> Definitely</label>
+        <label for="maybe"><input type="radio" name="recommend" id="recommend" value="2" class="inline"> Maybe</label>
+        <label for="not-sure"><input type="radio" name="recommend" id="recommend" value="3" class="inline"> Not Sure</label>
         <label for="feature">What is your favorite feature of freeCodeCamp?</label>
         <select name="feature" id="dropdown">
             <option value="">Select an option</option>
@@ -38,19 +38,19 @@
             <option value="4">Open Source</option>
         </select>
         <label for="improved">What would you like to see improved? (Check all that apply)</label>
-        <input type="checkbox" id="improved" value="1"> Front-end Projects
-        <input type="checkbox" id="improved" value="2"> Back-end Projects
-        <input type="checkbox" id="improved" value="3"> Data Visualization
-        <input type="checkbox" id="improved" value="4"> Challenges
-        <input type="checkbox" id="improved" value="5"> Open Source Community
-        <input type="checkbox" id="improved" value="6"> Gitter help rooms
-        <input type="checkbox" id="improved" value="7"> Videos
-        <input type="checkbox" id="improved" value="8"> City Meetups
-        <input type="checkbox" id="improved" value="9"> Wiki
-        <input type="checkbox" id="improved" value="10"> Forum
-        <input type="checkbox" id="improved" value="11"> Additional Courses
+        <label for="front-end"><input type="checkbox" id="improved" value="1" class="inline"> Front-end Projects</label>
+        <label for="back-end"><input type="checkbox" id="improved" value="2" class="inline"> Back-end Projects</label>
+        <label for="data"><input type="checkbox" id="improved" value="3" class="inline"> Data Visualization</label>
+        <label for="challenges"><input type="checkbox" id="improved" value="4" class="inline"> Challenges</label>
+        <label for="open-source"><input type="checkbox" id="improved" value="5" class="inline"> Open Source Community</label>
+        <label for="gitter"><input type="checkbox" id="improved" value="6" class="inline"> Gitter help rooms</label>
+        <label for="videos"><input type="checkbox" id="improved" value="7" class="inline"> Videos</label>
+        <label for="meetups"><input type="checkbox" id="improved" value="8" class="inline"> City Meetups</label>
+        <label for="wiki"><input type="checkbox" id="improved" value="9" class="inline"> Wiki</label>
+        <label for="wiki"><input type="checkbox" id="improved" value="9" class="inline"> Wiki</label>
+        <label for="courses"><input type="checkbox" id="improved" value="11" class="inline"> Additional Courses</label>
         <label for="comments">Any comments or suggestions?</label>
-        <textarea name="comments" id="comments" placeholder="Enter your comment here..."></textarea>
+        <textarea name="comments" id="comments" placeholder="Enter your comment here..." rows="4" cols="40"></textarea>
         <button type="submit" id="submit">Submit</button>
     </form>
 </body>
